--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,31 +1,40 @@
-header a{
-    text-decoration: none;
-    font-weight: bold;
-    color: #fff;
+body {
+  margin: 0;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-main{
-    padding: 1rem;
+header {
+  background-color: #404040;
+  padding: 1rem;
 }
 
-.products{
-    display: flex;
-    flex-wrap:wrap;
-    justify-content: center;
+header a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #fff;
 }
 
-.product{
-    border: 1px solid #404040;
-    margin: 1rem;
+main {
+  padding: 1rem;
 }
 
-.product img{
-    width:100%;
-    max-width: 400px;
-    /* height: 400px; */
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.product-info{
-    padding: 1rem;
+.product {
+  border: 1px solid #404040;
+  margin: 1rem;
 }
 
+.product img {
+  width: 100%;
+  max-width: 400px;
+  height: 400px;
+}
+
+.product-info {
+  padding: 1rem;
+}
